modules/gdscript/tests/scripts/analyzer/errors/constant_used_as_function.gd
const CONSTANT = 25


func test():
	CONSTANT(123)
